	* configs/*/nxwm:  Default priorities for NxWidget and NxWM threads
	  should be 100, not 50, to be consistent with other default priorities.
	* configs/hymini-stm32v/buttons, nsh, and nsh2:  Configurations converted
	  to use the kconfig-frontends tools (Laurent Latil, 2013-5-14)
	* configs/hymini-stm32v/src:  Converted to use the common SSD1289 driver
	  (Laurent Latil, 2013-5-14)
	* configs/hymini-stm32v/ostest and usbnsh:  Add OS test and USB/NSH
	  configurations (Laurent Latil, 2013-5-14).
	* configs/hymini-stm32v/src/up_nsh.c:  Add support for the card detect
	  (CD) interrupt (Laurent Latil, 2013-5-14).
	* configs/hymini-stm32v/src/nx and nxlines:  Removed these configurations
	  (Laurent Latil, 2013-5-14).
	* arch/arm/src/stm32/chip/stm32f10xx_dma.h:  Fix some bad DMA register
	  definitions.  From Laurent Latil (2013-5-15).
	* configs/hymini-stm32v:  Enable SDIO in nsh2 configuration; remove
	  warning from src/up_ssd1289.c.  From Laurent Latil (2013-5-15).
	* configs/hymini-stm32v/src/up_r61505u.c:   Support for the R65105-
	  based LCD that comes with some HY-Mini STM32v board.  From Christian
	  Faure (2013-5-16).
	* syscall/syscall_lookup.h:  Missing underscore character in SYS_onexit.
	  Reported by Ken Pettit (2013-5-17).
	* nuttx/syscall/syscall.csv:  Type of first parameter of on_exit() is
	  wrong. Reported by Ken Pettit (2013-5-17).
	* configs/mikroe-stm32f4/kernel/, kostest/ and scripts/:  Add kernel build
	  support and kernel mode OS test example for the the MikroElektronkia
	  MultiMedia STM32 M4 board.  From Ken Pettit (2013-5-17).
	* arch/arm/include/stm32/chip.h and arch/arm/src/stme32/chip/stm32l15xxx_pinmap.h:
	  Beginning of support for the STM32L15X family (2013-5-18).
	* arch/arm/include/stm32/stm32l15xxx_irq.h and arch/arm/src/stm32/chip/stm32l15xxx_vectors.h:
	  Support for STM32L15X interrupt vectors (2013-5-18).
	* arch/arm/src/stm32/chip/stm32l15xxx_gpio.h and related STM32 GPIO files:
	  Add GPIO support for the STM32L215X