@@ -43,7 +43,9 @@
 #include <nuttx/config.h>
 #include "chip.h"
 
-#if defined(CONFIG_STM32_STM32F10XX)
+#if defined(CONFIG_STM32_STM32L15XX)
+#  include "chip/stm32l15xxx_memorymap.h"
+#elif defined(CONFIG_STM32_STM32F10XX)
 #  include "chip/stm32f10xxx_memorymap.h"
 #elif defined(CONFIG_STM32_STM32F20XX)
 #  include "chip/stm32f20xxx_memorymap.h"
