@@ -4732,4 +4732,6 @@
 	* arch/arm/include/stm32/stm32l15xxx_irq.h and arch/arm/src/stm32/chip/stm32l15xxx_vectors.h:
 	  Support for STM32L15X interrupt vectors (2013-5-18).
 	* arch/arm/src/stm32/chip/stm32l15xxx_gpio.h and related STM32 GPIO files:
-	  Add GPIO support for the STM32L215X
+	  Add GPIO support for the STM32L215X (2013-5-18).
+	* arch/arm/src/stm32/chip/stm32l15xxx_memorymap.h: STM32L215X memory map
+	 (2013-5-18).
